--- a/paper/diagonalsPermutahedra.bib
+++ b/paper/diagonalsPermutahedra.bib
@@ -499,53 +499,60 @@
 	PAGES = {x+349},
 }
 
-@article{DotsenkoShadrinVallette,
-  title = {Pre-{{Lie}} Deformation Theory},
-  author = {Dotsenko, Vladimir and Shadrin, Sergey and Vallette, Bruno},
-  year = {2016},
-  journal = {Moscow Mathematical Journal},
-  volume = {16},
-  number = {3},
-  pages = {505--543},
-  fjournal = {Moscow Mathematical Journal}
+@incollection {Loday-diagonal,
+	AUTHOR = {Loday, Jean-Louis},
+	TITLE = {The diagonal of the {S}tasheff polytope},
+	BOOKTITLE = {Higher structures in geometry and physics},
+	SERIES = {Progr. Math.},
+	VOLUME = {287},
+	PAGES = {269--292},
+	PUBLISHER = {Birkh\"{a}user/Springer, New York},
+	YEAR = {2011},
 }
 
 @phdthesis{Doker,
-   AUTHOR = {Doker, Jeffrey Samuel},
-   TITLE = {Geometry of Generalized Permutohedra},
-   SCHOOL ={University of California, Berkeley},
-   YEAR = {2011},}
-
-@incollection{Loday,
-  title = {The Diagonal of the {{Stasheff}} Polytope},
-  booktitle = {Higher Structures in Geometry and Physics},
-  author = {Loday, Jean-Louis},
-  year = {2011},
-  series = {Progr. {{Math}}.},
-  volume = {287},
-  pages = {269--292},
-  publisher = {{Birkh\"auser/Springer, New York}}
+	AUTHOR = {Doker, Jeffrey Samuel},
+	TITLE = {Geometry of Generalized Permutohedra},
+	SCHOOL ={University of California, Berkeley},
+	YEAR = {2011},
 }
 
-@article{palacios2004weak,
-  title = {Weak {{Bruhat}} Order on the Set of Faces of the Permutohedron and the Associahedron},
-  author = {Palacios, Patricia and Ronco, Mar{\'i}a O.},
-  year = {2006},
-  month = may,
-  journal = {Journal of Algebra},
-  volume = {299},
-  number = {2},
-  pages = {648--678},
-  issn = {0021-8693},
-  doi = {10.1016/j.jalgebra.2005.09.042},
+@article {DotsenkoShadrinVallette,
+	AUTHOR = {Dotsenko, Vladimir and Shadrin, Sergey and Vallette, Bruno},
+	TITLE = {Pre-{L}ie deformation theory},
+	JOURNAL = {Mosc. Math. J.},
+	FJOURNAL = {Moscow Mathematical Journal},
+	VOLUME = {16},
+	YEAR = {2016},
+	NUMBER = {3},
+	PAGES = {505--543},
 }
 
-@article{dermenjian2018facial,
-  title={The facial weak order and its lattice quotients},
-  author={Dermenjian, Aram and Hohlweg, Christophe and Pilaud, Vincent},
-  journal={Transactions of the American Mathematical Society},
-  volume={370},
-  number={2},
-  pages={1469--1507},
-  year={2018}
+@unpublished {KrobLatapyNovelliPhanSchwer,
+	AUTHOR = {Daniel Krob and Matthieu Latapy and Jean-Christophe Novelli and Ha-Duong Phan and Sylviane Schwer},
+	TITLE = {Pseudo-{P}ermutations {I}: {F}irst {C}ombinatorial and {L}attice {P}roperties},
+	NOTE = {13th International Conference on Formal Power Series and Algebraic Combinatorics (FPSAC 2001)},
+	YEAR = {2001},
+}
+
+@article {PalaciosRonco,
+	AUTHOR = {Palacios, Patricia and Ronco, Mar{\'{\i}}a O.},
+	TITLE = {Weak {B}ruhat order on the set of faces of the permutohedron and the associahedron},
+	JOURNAL = {J. Algebra},
+	FJOURNAL = {Journal of Algebra},
+	VOLUME = {299},
+	YEAR = {2006},
+	NUMBER = {2},
+	PAGES = {648--678},
+}
+
+@article {DermenjianHohlwegPilaud,
+	AUTHOR = {Aram Dermenjian and Christophe Hohlweg and Vincent Pilaud},
+	TITLE = {The facial weak order and its lattice quotients},
+	JOURNAL = {Trans. Amer. Math. Soc.},
+	FJOURNAL = {Transactions of the American Mathematical Society},
+	VOLUME = {370},
+	YEAR = {2018},
+	NUMBER = {2},
+	PAGES = {1469--1507},
 }
