--- a/paper/diagonalsPermutahedra.tex
+++ b/paper/diagonalsPermutahedra.tex
@@ -3029,7 +3029,7 @@ However, as $j_k$ must be dominated by an element of $I$, this forces $w = i_1$ 
 \subsection{Relation to the facial weak order}
 \label{sec:facial-weak-order}
 
-There is a natural lattice structure on all ordered partitions which extends the weak order on permutations.
+There is a natural lattice structure on all ordered partitions of~$[n]$ which extends the weak order on permutations of~$[n]$.
 This lattice was introduced in~\cite{KrobLatapyNovelliPhanSchwer}, where it is called \emph{pseudo-permutahedron} and defined on packed words rather than ordered partitions.
 It was later generalized to arbitrary finite Coxeter groups in~\cite{PalaciosRonco, DermenjianHohlwegPilaud}, where it is called \emph{facial weak order} and expressed in more geometric terms.
 We now recall a definition of the facial weak order on ordered partitions, and use the vertex characterization of the preceding section to show all faces of the  $\LA$ and $\SU$ diagonal are intervals of this order.
